[gd_scene load_steps=15 format=3 uid="uid://dplk7o3h2852t"]

[ext_resource type="Script" path="res://Levels/tutorial_level/tutorial_level.gd" id="1_pyyxn"]
[ext_resource type="Script" path="res://Levels/tutorial_level/background.gd" id="2_6lllp"]
[ext_resource type="Texture2D" uid="uid://g53gir8gltrk" path="res://assets/big_clouds.png" id="2_hw37j"]
[ext_resource type="PackedScene" uid="uid://cpexrccyxv8mv" path="res://Levels/tutorial_level/map/tutorial_level_map.tscn" id="2_s47r2"]
[ext_resource type="PackedScene" uid="uid://b57sr0tds5iub" path="res://player/player.tscn" id="3_kluvr"]
[ext_resource type="PackedScene" uid="uid://4hsrj6bxicge" path="res://player/Fog.tscn" id="4_a1qvb"]
[ext_resource type="PackedScene" uid="uid://dh4grgmdhuix1" path="res://Portal/portal.tscn" id="5_jpfvr"]
[ext_resource type="PackedScene" uid="uid://cfsc3qvxf5inh" path="res://UI/pause_screen/pause_screen.tscn" id="5_qkyfm"]
[ext_resource type="PackedScene" uid="uid://7ipluu0nqigr" path="res://coin/coin.tscn" id="6_7xokk"]
[ext_resource type="AudioStream" uid="uid://bks33venamv20" path="res://assets/Tutorial_music.wav" id="6_klkxq"]
[ext_resource type="AudioStream" uid="uid://bj5e6os60grvl" path="res://assets/Near_portal.wav" id="7_jgus0"]
[ext_resource type="PackedScene" uid="uid://oxcvkqfc8tk6" path="res://UI/fading/fading.tscn" id="10_qg1f8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p5i5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nog8"]
size = Vector2(11419, 912)

[node name="TutorialLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyyxn")

[node name="background" type="ParallaxBackground" parent="."]
process_mode = 3
script = ExtResource("2_6lllp")

[node name="Clouds" type="ParallaxLayer" parent="background"]
motion_scale = Vector2(0.4, 0.4)
motion_offset = Vector2(10, 10)
motion_mirroring = Vector2(1920, 1080)

[node name="TextureRect" type="TextureRect" parent="background/Clouds"]
material = SubResource("ShaderMaterial_p5i5r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hw37j")
expand_mode = 3
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.711, 0.736954, 0.734409, 1)

[node name="Background" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="Node2D" parent="."]

[node name="tutorial_level_map" parent="Level" instance=ExtResource("2_s47r2")]
position = Vector2(-119, 8)
scale = Vector2(3, 3)

[node name="Coin" parent="Level" instance=ExtResource("6_7xokk")]
position = Vector2(1972, 294)
scale = Vector2(3, 3)

[node name="FirstPlayerPosition" type="Marker2D" parent="Level"]
position = Vector2(579, 786)

[node name="Player" parent="Level" instance=ExtResource("3_kluvr")]
position = Vector2(202, 408)

[node name="Area2D" type="Area2D" parent="Level"]
position = Vector2(-567, 1373)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Area2D"]
position = Vector2(4952, 687)
shape = SubResource("RectangleShape2D_6nog8")

[node name="RespawnTimer" type="Timer" parent="Level"]
one_shot = true

[node name="Portal" parent="Level" instance=ExtResource("5_jpfvr")]
position = Vector2(3498, 65)
portal_color = Color(0.501961, 0, 0.00784314, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource("6_klkxq")
volume_db = -18.0
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(3862, -193)
stream = ExtResource("7_jgus0")
autoplay = true
max_distance = 1200.0
attenuation = 0.31864

[node name="UI" type="CanvasLayer" parent="."]

[node name="Fog" parent="UI" instance=ExtResource("4_a1qvb")]

[node name="Pause_Screen" parent="UI" instance=ExtResource("5_qkyfm")]
visible = false

[node name="RespawnFading" parent="." instance=ExtResource("10_qg1f8")]
visible = false

[connection signal="pause" from="Level/Player" to="." method="_on_player_pause"]
[connection signal="body_shape_entered" from="Level/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="timeout" from="Level/RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="body_shape_entered" from="Level/Portal" to="." method="_on_portal_body_shape_entered"]
